# css-html-prettify

./: PKGBUILD  README.md  css-html-prettify-1.0.0-1.noarch.rpm  css-html-prettify-1.2.2-1.noarch.rpm  css-html-prettify-1.8.0-1.noarch.rpm  css-html-prettify.py  python3-css-html-prettify_1.0.0-1_all.deb  python3-css-html-prettify_1.2.2-1_all.deb  python3-css-html-prettify_1.8.0-1_all.deb  setup.cfg  setup.py
