# See: https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name             = css-html-prettify
provides         = css-html-prettify
description      = StandAlone Async cross-platform Prettifier Beautifier for the Web.
url              = https://github.com/juancarlospaco/css-html-prettify#css-html-prettify
download_url     = https://github.com/juancarlospaco/css-html-prettify#css-html-prettify
author           = Juan Carlos
author_email     = example@example.com
maintainer       = Deborah Melltrozzo
maintainer_email = example@example.com
keywords         = python3, argentina, CSS, HTML, Prettify, CSS3, HTML5, Web, Beautify
license          = GPL-3 LGPL-3
platforms        = Linux, Darwin, Windows
version          = attr: css-html-prettify.__version__
project_urls     =
    Docs = https://github.com/juancarlospaco/css-html-prettify/README.md
    Bugs = https://github.com/juancarlospaco/css-html-prettify/issues

license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =  # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development


[options]
zip_safe = True
include_package_data = True
python_requires  = >=3.6
tests_require    = isort ; prospector ; pre-commit ; pre-commit-hooks
install_requires = beautifulsoup4
setup_requires   = beautifulsoup4
packages         = find:

[bdist_wheel]
universal = 1
python-tag = py36

[install_lib]
compile = 0
optimize = 2

[bdist_egg]
exclude-source-files = true

# [options.package_data]
# * = *.pxd, *.pyx, *.json, *.txt

# [options.exclude_package_data]
# ;* = *.c, *.so, *.js

# [options.entry_points]
# console_scripts =
#     foo = my_package.some_module:main_func
#     bar = other_module:some_func
# gui_scripts =
#     baz = my_package_gui:start_func

# [options.packages.find]
# where   = .
# include = *.py, *.pyw
# exclude = *.c, *.so, *.js, *.tests, *.tests.*, tests.*, tests
